# business-planner

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: codecov.yml
business-planner/: Cargo.toml
business-planner-cli/: Cargo.toml
business-planner-cli/plugins/linear/: main.py  pyproject.toml
business-planner-cli/src/: error.rs  errors.rs  interactive.rs  main.rs  save.rs  shell.rs
business-planner-cli/src/linear/: mod.rs
business-planner-cli/src/linear/estimator/: error.rs
business-planner-cli/src/linear/predictor/: mod.rs
business-planner-cli/src/linear/report/: mod.rs
business-planner-cli/src/plugins/: mod.rs  run.rs
business-planner-cli/src/registry/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
business-planner-cli/src/registry/create/: material.rs  mod.rs  store.rs
business-planner-cli/src/registry/update/: material.rs  mod.rs  store.rs
business-planner-cli/src/shells/: interactive.rs  mod.rs  non_interactive.rs
business-planner-cli/src/subcommands/: generate.rs  mod.rs  registry.rs  save.rs  top_level.rs
business-planner-plugin/: pyproject.toml
business-planner-plugin/src/business_planner_plugin/: __init__.py  main.py
business-planner-plugin/src/business_planner_plugin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
business-planner/plugins/: test.py
business-planner/rust_plugins/linear/estimator/: mod.rs
business-planner/rust_plugins/linear/predictor/: error.rs
business-planner/src/: error.rs  lib.rs  structs.rs
business-planner/src/api/: error.rs  mod.rs  plugins.rs  registry.rs  reports.rs  session.rs
business-planner/src/cli_api/: error.rs  mod.rs
business-planner/src/cli_api/init/: init_shell.rs  mod.rs
business-planner/src/cli_api/shells/: interactive.rs  non_interactive.rs
business-planner/src/cli_api/subcommands/: generate.rs  mod.rs  save.rs  top_level.rs
business-planner/src/errors/: mod.rs  session.rs
business-planner/src/io/: csv.rs  error.rs  mod.rs  psql.rs  xlsx.rs
business-planner/src/plugins/: error.rs  mod.rs  python.rs
business-planner/src/plugins_api/: error.rs  mod.rs  python.rs
business-planner/src/registry/: mod.rs
business-planner/src/registry/structs/: material.rs  mod.rs  store.rs
business-planner/src/reports/: error.rs  mod.rs  stock_take_prediction.rs
business-planner/src/sandbox/: mod.rs
business-planner/src/session/: error.rs  mod.rs
business-planner/src/usage_rates/: mod.rs
io/: Cargo.toml
io/samples/: csv.csv  excel.xlsx
io/src/: csv.rs  errors.rs  lib.rs  psql.rs  xlsx.rs
usage-rates/: Cargo.toml
