[package]
name = "business-planner-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
business-planner = { path = "../business-planner" }
tokio = "1.48.0"
bigdecimal = { version = "0.4.9", features=["serde"] }
jiff = "0.2.16"
clap = { version = "4.5.51", features = ["derive"] }
inquire = "0.9.1"
strum = "0.27"
strum_macros = "0.27"
