[package]
name = "business-planner"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = "1.48.0"
bigdecimal = { version = "0.4.9", features=["serde"] }
jiff = "0.2.16"

umya-spreadsheet = { version = "2.3.3", optional = true }
csv = { version = "1.4.0", optional = true }
sqlx = { version = "0.8.6", features=["runtime-tokio", "postgres"], optional = true }
serde-xml-rs = "0.8.1"
serde = "1.0.228"

[dev-dependencies]
pgtemp = "0.6.0"

[features]
default = ["excel", "csv", "postgres"]
csv = ["dep:csv"]
excel = ["dep:umya-spreadsheet"]
postgres = ["dep:sqlx"]
