[package]
name = "business-planner"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = "1.48.0"
jiff = { version = "0.2.16", features=["serde"] }

umya-spreadsheet = { version = "2.3.3", optional = true }
csv = { version = "1.4.0", optional = true }
sqlx = { version = "0.8.6", features=["runtime-tokio", "postgres"], optional = true }
serde-xml-rs = "0.8.1"
serde = "1.0.228"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
sonic-rs = "0.5.6"

[dev-dependencies]
pgtemp = "0.6.0"

[features]
default = ["excel", "csv", "postgres"]
csv = ["dep:csv"]
excel = ["dep:umya-spreadsheet"]
postgres = ["dep:sqlx"]
